# coding-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  results.sarif  supervisor.py  test_ollama.py
.claude/: settings.local.json
agent/: __init__.py  chain_runner.py  orchestrator.py  platform.py  sdlc_workflow.py
agent/agents/: __init__.py  architect_agent.py  base_agent.py  chat_agent.py  developer_agent.py  documenter_agent.py  mapper_agent.py  plan_agent.py  plan_reviewer_agent.py  planner_agent.py  red_team_agent.py  research_agent.py  reviewer_agent.py  tester_agent.py
agent/human_loop/: __init__.py  human_in_the_loop.py
agent/memory/: __init__.py  codebase_memory.py  memory_wiki.py  session_memory.py
agent/multi_agent/: __init__.py  workflow.py
agent/security/: paths.py  prompt_guard.py
agent/skills/: __init__.py  skill_executor.py  skill_loader.py  wiki_manager.py
agent/subagent/: __init__.py  spawner.py
agent/tools/: __init__.py  browser_tool.py  code_analysis_tool.py  code_chunker.py  document_tool.py  edit_tool.py  environment_probe.py  file_system_tool.py  git_tool.py  interactive_shell_tool.py  search_tool.py  shell_tool.py  test_runner_tool.py  tool_executor.py  web_tool.py
aiChangeLog/: phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-17.md  phase-18.md  phase-19.md  phase-20.md  phase-21.md  phase-22.md  phase-23.md  phase-24.md  phase-25.md
api/: discord_bot.py  job_store.py  main.py  task_store.py
config/: environment.yaml  models.yaml  task_classifier.yaml
data/: memory.db
data/chroma_db/: chroma.sqlite3
docs/: capabilities.md  examples.md  user-manual.md
docs/plans/: Project-Review-01.md  Project-Review-02.md  implementation_plan_v1.md  implementation_plan_v2.md
llm/: __init__.py  circuit_breaker.py  cloud_api_client.py  config.py  cost_tracker.py  health.py  model_resilience.py  model_router.py  ollama_client.py  rate_limiter.py  retry.py  streaming.py
local_coding_agent/: __init__.py  __main__.py
mcp/: __init__.py  server.py
mcp/tools/: filesystem_server.py  git_server.py
observability/: __init__.py  logging.py  metrics.py  routes.py
skills/wiki-compile/: SKILL.md
skills/wiki-lint/: SKILL.md
skills/wiki-query/: SKILL.md
tests/integration/: conftest.py  test_discord_sdlc_sim.py  test_discord_sim.py  test_model_fallback.py  test_sdlc_full_cycle.py  test_sdlc_phases_individual.py  test_search.py  test_sessions.py  test_task_loop.py
tests/unit/: test_agents.py  test_circuit_breaker.py  test_code_analysis.py  test_code_chunker.py  test_edit_tool.py  test_git.py  test_human_loop.py  test_llm.py  test_mcp.py  test_memory.py  test_memory_wiki.py  test_model_resilience.py  test_multi_agent.py  test_runner.py  (+7 more)
